--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.4",
+    "@react-navigation/bottom-tabs": "^6.0.0-next.13",
+    "@react-navigation/material-bottom-tabs": "^6.0.0-next.9",
+    "@react-navigation/material-top-tabs": "^6.0.0-next.10",
+    "@react-navigation/native": "^6.0.0-next.9",
+    "@react-navigation/stack": "^6.0.0-next.20",
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-pager-view": "^5.1.9",
+    "react-native-paper": "^4.8.1",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.3.0",
+    "react-native-tab-view": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
